--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -83,6 +83,7 @@
   }
 }
 .services_hr{
+  margin-top: 10px;
   border: 1px solid green;
   width:110px;
 }
@@ -130,7 +131,7 @@
     border-radius: 22px;
   }
   .Blog_img_style{
-    width: 311px;
+    width: 315px;
     height:220px;
       border-radius: 22px;
   }
@@ -754,7 +755,7 @@
 /* padding: 20px; */
   flex-wrap: wrap;
 
-  width: 100%;
+  width: 85%;
   
 
   margin: 0 auto;
@@ -870,9 +871,10 @@ transition: all 0.8s ease;
       }
     }    
     .Blogs_detail
-    {
+    {   font-family: 'roboto';
       width: 100%;
-      height: 100vh;
+      display: flex;
+      /* height: 100vh; */
       background-color: #229958;
     }
     .inner_Blogs_detail
@@ -882,7 +884,43 @@ transition: all 0.8s ease;
 }
 .BlogDetail_height{
   font-size: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+
 }
+.Blogdetail_para{
+  color:#FFFFFF;
+  font-size: 13px;
+  text-align: justify;
+}
+.Blog_img{
+  width: 500px;
+}
+.blogdetail_second{
+width: 50%;
+padding: 80px;
+padding-left: 160px;
+}
+.background_Blogdetail_img{
+
+  height: 89vh;
+  background-image: url("../image/blog_detail_background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity:1;
+  width:100%;
+} 
+.background_Blogdetail_img::before{
+  background-color: rgba(0, 0, 0, 0.79);
+  content: '';
+  display: block;
+  height: 89vh;
+  position: absolute;
+  width: 100%;
+}
+
+
+
 
 
 
