--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -9,6 +9,7 @@
 
 .rec.rec-dot{
   visibility: hidden;
+
 }
 
 .rec.rec-dot_active {
@@ -84,7 +85,8 @@ padding: 50px;
 .Case-Studies_detail_line{
   margin-top: 20px;
 width:100px;
-    border: 1px solid rgb(34, 153, 88); 
+border: 1px solid rgb(34, 153, 88); 
+
 }
 .cards3 {
   max-width: 1200px;
@@ -248,7 +250,7 @@ align-items: center;
     color: #fff;
     margin: 0 10px;
     font-family: 'roboto';
-    text-align: center;
+    text-align: justify;
     border-radius: 22px;
     
     
