--- a/src/ABOUT/About.css
+++ b/src/ABOUT/About.css
@@ -61,7 +61,7 @@
 
 }
 .about_img{
- /* margin-top: 20px; */
+
  display: flex;
  flex-direction: column;
  justify-content: center;
@@ -125,6 +125,65 @@ border: none;
 }
 
 
+
+@media screen and (max-width: 900px ) {
+
+  
+    .about{
+      margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+ justify-content: center;
+    height: 100%;
+    
+    }
+    .about_img1 {
+      width: 100%;
+      height: 500px;
+      opacity: 1.9;
+      border-top-left-radius: 22px;
+      border-top-right-radius: 22px;
+  }
+  .about_img2 {
+    width: 50vw;
+    height: 5vh;
+}
+  
+  
+    .aboutus {
+      display: flex;
+      flex-direction: column;
+      /* align-items: center; */
+      justify-content: space-around;
+      text-align: left;
+      padding: 30px;
+      /* background-color: blue; */
+      width: 100%;
+  }
+  .aboutus {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: left;
+    height: 59vh;
+    /* background-color: blue; */
+    width: 100%;
+}
+.H_aboutus {
+  font-size: 40px;
+  text-align: center;
+  font-family: "roboto";
+  color: #229958;
+}
+.aboutus_inner{
+text-align: center;
+
+}
+
+}
+
+
 @media screen and (max-width: 425px ) {
 
   .H_aboutus
@@ -133,7 +192,7 @@ border: none;
     font-family: "roboto";
   }
   .p_aboutus{
-   font-size:10px;
+   font-size:12px;
     text-align: justify;
   }
   .about_btn{
@@ -160,7 +219,7 @@ border: none;
     font-family: "roboto";
   }
   .p_aboutus{
-   font-size:10px;
+   font-size:13px;
     text-align: justify;
   }
   .about_btn{
