--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -1,11 +1,9 @@
 .rec.rec-arrow {
   border-radius: 0;
-  background-color: green;
+  background-color: green;  
 }
 
-.rec.rec-arrow:disabled {
-  visibility: hidden;
-}
+
 
 .rec.rec-dot{
   visibility: hidden;
@@ -30,10 +28,19 @@
   background-color: green;
 
 }
-.rec.rec-arrow.rec-arrow-left:hover{
+.rec.rec-arrow.rec-arrow-right{
   border-radius: 50%;
-  background-color: green;
+  background-color: none;
 
+}
+.rec.rec-arrow.rec-arrow-left{
+  border-radius: 50%;
+  background-color: none;
+
+}
+.rec.rec-arrow.rec-arrow-left:hover{
+  /* border-radius: 50%; */
+  background-color: green;
 }
 .background_casestudies{
 
@@ -248,14 +255,15 @@ flex-direction: column;
 justify-content: space-around;
 padding: 20px;
 align-items: center;
-    height: 270px;
-    width: 100%;
-    background-color: #626363;
-    color: #fff;
+  height: 270px;
+  width: 100%;
+  background-color: #626363;
+  color: #fff;
     margin: 0 10px;
     font-family: 'roboto';
     text-align: justify;
     border-radius: 22px;
+    font-size: 17px;
     
     
    }
@@ -264,6 +272,38 @@ align-items: center;
     transition: all 0.8s ease;
     
    }
+   @media (max-width: 613px){
+    .itemm2{
+    
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      
+      align-items: center;
+          height: 270px;
+        
+          width: 100%;
+          background-color: #626363;
+          color: #fff;
+          margin: 0 10px;
+          font-family: 'roboto';
+          text-align: center;
+          border-radius: 22px;
+          font-size: 15px;
+          
+         }
+         .Case_containers{
+          background-color:#444545;       
+          padding: 30px;
+           display: flex;
+           justify-content: center;
+           width: 100%;
+           
+           
+           margin: 30px auto;
+           /* background-color: red; */
+         }
+  }
    @media (max-width: 540px){
     .itemm2{
     
@@ -303,7 +343,7 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 270px;
+          height: 290px;
         
           width: 100%;
           font-size: 11px;
@@ -319,6 +359,42 @@ align-items: center;
           background-color:#444545;
        
           padding: 30px;
+           display: flex;
+           justify-content: center;
+           width: 100%;
+                     
+           margin: 30px auto;
+           /* background-color: red; */
+         }
+  }
+  @media (max-width: 421px){
+    .Carousel2_upper
+    {
+     width:100%;
+    }
+    .itemm2{
+    
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      
+      align-items: center;
+          height: 270px;
+        
+          width: 100%;
+          font-size: 11px;
+          background-color: #626363;
+          color: #fff;
+          margin: 0 10px;
+          font-family: 'roboto';
+          text-align: center;
+          border-radius: 22px;
+          
+         }
+         .Case_containers{
+          background-color:#444545;
+       
+          /* padding: 30px; */
            display: flex;
            justify-content: center;
            width: 100%;
@@ -596,7 +672,7 @@ font-size: 15px;
   .detail_case-st-background{
     background-position: center;
   }
-  
+
 
 
 
