--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -6,7 +6,6 @@
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-
 }
 .contact_images{
     align-self: center;
@@ -34,3 +33,111 @@ margin-left: 50px;
     width: 100px;
     
 }
+.contact2_1{
+    width: 20vw;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20px;
+ 
+}
+.contact2_2{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: justify;
+    font-family: "roboto";
+    color: white;
+
+}
+.contact2_3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.contact2_4{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    margin: 5px;
+}
+.contact2_5{
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+background-color: black;
+    font-size: 13px;
+    font-family: "roboto";
+    color: white;
+}
+.logoiconn{
+width: 60px;
+}
+
+@media only screen and (max-width: 930px) {
+    .contact2{
+        width: 100%;
+       height: 100%;
+        display: flex;
+        flex-direction: column;
+     justify-content: center    ;
+        /* justify-content: space-evenly; */
+        background-color: black; 
+    
+    }
+    .contact2_1 {
+        width: 100%;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 20px;
+        align-self: center;
+        text-align: center;
+    }
+    .contact2_2 {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: justify;
+        font-family: "roboto";
+        color: white;
+        align-items: center;
+    }
+    .logoiconn{
+        align-self: center;
+        }
+        .contact2_3 {
+            margin-top: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .contact2_4 {
+            display: flex;
+            margin-top: 50px;
+            flex-direction: column;
+            justify-content: center;
+            color: white;
+            text-align: center  ;            
+            align-self: center;
+        }
+        .contact2_5{
+          
+        padding-top: 20px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        background-color: black;
+            font-size: 13px;
+            font-family: "roboto";
+            color: white;
+        }
+
+  }
