--- a/src/ABOUT/About.css
+++ b/src/ABOUT/About.css
@@ -23,7 +23,7 @@
     flex-basis: 50%;
   }
 } */
- 
+
 /* three images per line when browser width exceeds 960px
 @media only screen and (min-width: 960px) {
   .grid-image {
@@ -44,121 +44,105 @@
     flex-basis: 20%;
   }
 } */
-.contain{
-
-
-
-     width: 100%;
+.contain {
+  width: 100%;
   background-color: white;
   height: auto;
 }
-.about{
+.about {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height:100vh;
-
+  height: 100vh;
 }
-.about_img{
+.about_img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
 
- display: flex;
- flex-direction: column;
- justify-content: center;
- width:50%;
-
-
- /* background-color: black; */
+  /* background-color: black; */
 }
-.aboutus{
-
-display: flex;
-flex-direction: column;
- /* align-items: center; */
-  justify-content:space-around;
+.aboutus {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: space-around;
   text-align: left;
   height: 59vh;
   /* background-color: blue; */
-  width: 30%; 
+  width: 30%;
 }
-.img_line{
-  width:160px;
+.img_line {
+  width: 160px;
 }
-.about_img1{
-width: 82% ;
-height: 500px;
+.about_img1 {
+  width: 82%;
+  height: 500px;
 
-
-opacity: 1.9;
-border-top-left-radius: 22px;
-border-top-right-radius: 22px;
-
+  opacity: 1.9;
+  border-top-left-radius: 22px;
+  border-top-right-radius: 22px;
 }
-.about_img2{
- width: 40.7vw;
- height: 7vh;
+.about_img2 {
+  width: 40.7vw;
+  height: 7vh;
 }
-.about_btn{
- /* font-size: 14px; */
- align-items:flex-start;
- width: 120px;
- height: 45px;
- background-color:#444545;
- color: white;
-border-radius: 10px;
-border: none;
-
+.about_btn {
+  /* font-size: 14px; */
+  align-items: flex-start;
+  width: 120px;
+  height: 45px;
+  background-color: #444545;
+  color: white;
+  border-radius: 10px;
+  border: none;
 }
-.H_aboutus{
-  font-size:40px;
+.H_aboutus {
+  font-size: 40px;
   text-align: justify;
   font-family: "roboto";
-  color:#229958;
+  color: #229958;
 }
-.p_aboutus{
+.p_aboutus {
   margin-top: 20px;
-  font-size:18px;
+  font-size: 18px;
   text-align: justify;
   font-family: "roboto";
-  color: #5F5E5E;
+  color: #5f5e5e;
   line-height: 20px;
 }
 
-
-
-@media screen and (max-width: 900px ) {
-
-  
-    .about{
-      margin-top: 40px;
+@media screen and (max-width: 900px) {
+  .about {
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
- justify-content: center;
+    justify-content: center;
     height: 100%;
-    
-    }
-    .about_img1 {
-      width: 100%;
-      height: 500px;
-      opacity: 1.9;
-      border-top-left-radius: 22px;
-      border-top-right-radius: 22px;
+  }
+  .about_img1 {
+    width: 100%;
+    height: 500px;
+    opacity: 1.9;
+    border-top-left-radius: 22px;
+    border-top-right-radius: 22px;
   }
   .about_img2 {
     width: 50vw;
     height: 5vh;
-}
-  
-  
-    .aboutus {
-      display: flex;
-      flex-direction: column;
-      /* align-items: center; */
-      justify-content: space-around;
-      text-align: left;
-      padding: 30px;
-      /* background-color: blue; */
-      width: 100%;
+  }
+
+  .aboutus {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: space-around;
+    text-align: left;
+    padding: 30px;
+    /* background-color: blue; */
+    width: 100%;
   }
   .aboutus {
     display: flex;
@@ -169,92 +153,77 @@ border: none;
     height: 59vh;
     /* background-color: blue; */
     width: 100%;
-}
-.H_aboutus {
-  font-size: 40px;
-  text-align: center;
-  font-family: "roboto";
-  color: #229958;
-}
-.aboutus_inner{
-text-align: center;
-
-}
-
+  }
+  .H_aboutus {
+    font-size: 40px;
+    text-align: center;
+    font-family: "roboto";
+    color: #229958;
+  }
+  .aboutus_inner {
+    text-align: center;
+  }
 }
 
-
-@media screen and (max-width: 425px ) {
-
-  .H_aboutus
-  {
-    font-size:30px;
+@media screen and (max-width: 425px) {
+  .H_aboutus {
+    font-size: 30px;
     font-family: "roboto";
   }
-  .p_aboutus{
-   font-size:12px;
+  .p_aboutus {
+    font-size: 12px;
     text-align: justify;
   }
-  .about_btn{
+  .about_btn {
     font-size: 15px;
-    align-items:flex-start;
+    align-items: flex-start;
     width: 100px;
     height: 40px;
     background-color: #72818b;
     color: white;
-   border-radius: 10px;
-   }
-   .img_line{
+    border-radius: 10px;
+  }
+  .img_line {
     width: 120px;
-   }
-   
-
+  }
 }
 
-@media screen and (max-width: 375px ) {
-
-  .H_aboutus
-  {
-    font-size:20px;
+@media screen and (max-width: 375px) {
+  .H_aboutus {
+    font-size: 20px;
     font-family: "roboto";
   }
-  .p_aboutus{
-   font-size:13px;
+  .p_aboutus {
+    font-size: 13px;
     text-align: justify;
   }
-  .about_btn{
+  .about_btn {
     font-size: 15px;
-    align-items:flex-start;
+    align-items: flex-start;
     width: 100px;
     height: 40px;
     background-color: #72818b;
     color: white;
-   border-radius: 10px;
-   }
-
+    border-radius: 10px;
+  }
 }
-@media screen and (max-width: 280px ) {
-
-  .H_aboutus
-  {
-    font-size:10px;
+@media screen and (max-width: 280px) {
+  .H_aboutus {
+    font-size: 10px;
     font-family: "roboto";
   }
-  .p_aboutus{
-   font-size:8px;
+  .p_aboutus {
+    font-size: 8px;
     text-align: justify;
   }
-  .about_btn{
+  .about_btn {
     font-size: 10px;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     width: 80px;
     height: 40px;
     background-color: #72818b;
     color: white;
-   border-radius: 10px;
-   
-   }
-
+    border-radius: 10px;
+  }
 }
-
