--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,160 +3,233 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
-    /* overflow-y: hidden; */
+  line-height: 1;
+  /* overflow-y: hidden; */
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-  
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-  .img{
+.img {
+  height: 89vh;
+  background-image: url("../image/bannerr.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+  width: 100%;
+}
+.img2 {
+  height: 89vh;
+  background-image: url("../image/banner.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+  width: 100%;
+}
+.img2::before {
+  background-color: rgba(0, 0, 0, 0.79);
+  content: "";
+  display: block;
+  height: 89vh;
+  position: absolute;
+  width: 100%;
+}
+.img3 {
+  height: 89vh;
+  background-image: url("../image/background_img3.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+  width: 100%;
+}
+.img3::before {
+  background-color: rgba(0, 0, 0, 0.79);
+  content: "";
+  display: block;
+  height: 89vh;
+  position: absolute;
+  width: 100%;
+}
+.img4 {
+  height: 89vh;
+  background-image: url("../image/background_img4.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+  width: 100%;
+}
+.img4::before {
+  background-color: rgba(0, 0, 0, 0.79);
+  content: "";
+  display: block;
+  height: 89vh;
+  position: absolute;
+  width: 100%;
+}
+.centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  text-align: center;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-    height: 89vh;
-    background-image: url("../image/bannerr.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity:1;
-    width:100%;
-  } 
-  .img2{
-
-    height: 89vh;
-    background-image: url("../image/banner.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity:1;
-    width:100%;
-  } 
-  .img2::before{
-    background-color: rgba(0, 0, 0, 0.79);
-    content: '';
-    display: block;
-    height: 89vh;
-    position: absolute;
-    width: 100%;
-  }
-  .img3
-{
-    height: 89vh;
-    background-image: url("../image/background_img3.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity:1;
-    width:100%;
-  } 
-  .img3::before{
-    background-color: rgba(0, 0, 0, 0.79);
-    content: '';
-    display: block;
-    height: 89vh;
-    position: absolute;
-    width: 100%;
-  }
-  .img4
-  {
-      height: 89vh;
-      background-image: url("../image/background_img4.svg");
-      background-repeat: no-repeat;
-      background-size: cover;
-      opacity:1;
-      width:100%;
-    } 
-    .img4::before{
-      background-color: rgba(0, 0, 0, 0.79);
-      content: '';
-      display: block;
-      height: 89vh;
-      position: absolute;
-      width: 100%;
-    }
-  .centered {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    text-align: center;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-.btn_contact{
-    
-border-radius: 10px;
-font-size: 20px;
-padding: 15px;
-background-color:#229958;
-width: 200px;
-color: white;
-border: none;
-  }
-.btn_learn{
-   margin-left: 5px;
-    border-radius: 10px;
+.btn_contact {
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 15px;
+  background-color: #229958;
+  width: 200px;
+  color: white;
+  border: none;
+}
+.btn_learn {
+  margin-left: 5px;
+  border-radius: 10px;
   border: 1px solid #229958;
-font-size: 20px;
-padding: 15px;
-background-color: #229958;
-width: 200px;
-background-color: transparent;
-color: white;
+  font-size: 20px;
+  padding: 15px;
+  background-color: #229958;
+  width: 200px;
+  background-color: transparent;
+  color: white;
+}
+.btns {
+  margin-top: 30px;
+}
+@media screen and (max-height: 520px) {
+  .height {
+    /* margin-top: 40px; */
+    font-size: 10px;
   }
-  .btns{
-margin-top: 30px;
+  .height2 {
+    font-size: 10px;
   }
-  @media screen and (max-height:520px) {
-    .height{
-      /* margin-top: 40px; */
-        font-size: 10px;
-     }
-     .height2{
-         font-size: 10px;
-       
-      }
-  }
+}
 
-  
 /* 
   @media (max-width:767px) {
     .img {
@@ -233,126 +306,121 @@ margin-top: 30px;
   
   }
 } */
-.img::before{
-    background-color: rgba(0, 0, 0, 0.79);
-    content: '';
-    display: block;
-    height: 89vh;
-    position: absolute;
-    width: 100%;
-  }
-  .line{
-   margin-top: 40px;
-  }
-  .height{
+.img::before {
+  background-color: rgba(0, 0, 0, 0.79);
+  content: "";
+  display: block;
+  height: 89vh;
+  position: absolute;
+  width: 100%;
+}
+.line {
+  margin-top: 40px;
+}
+.height {
   font-size: 40px;
   color: white;
+}
+.height2 {
+  font-size: 40px;
+  color: white;
+}
+@media screen and (min-width: 2560px) {
+  .height {
+    text-align: center;
+
+    font-size: 80px;
   }
-  .height2{
-    font-size: 40px;
-    color: white;
-    }
-    @media screen and (min-width: 2560px ) {
-      .height{
-        text-align: center;
-   
-         font-size: 80px;
-      }
-      .height2{
-          font-size: 80px;    
-       }
-       .btn_contact{
-    
-border-radius: 10px;
-font-size: 30px;
-padding: 15px;
-background-color:#229958;
-width: 250px;
-color: white;
-border: none;
-height: 80px;
+  .height2 {
+    font-size: 80px;
   }
-.btn_learn{
-font-family:"roboto";
-  margin: 10px;
+  .btn_contact {
     border-radius: 10px;
-  border: 1px solid #229958;
-font-size: 30px;
-padding: 15px;
-background-color: #229958;
-width: 250px;
-background-color: transparent;
-height: 80px;
-color: white;
+    font-size: 30px;
+    padding: 15px;
+    background-color: #229958;
+    width: 250px;
+    color: white;
+    border: none;
+    height: 80px;
   }
-  .p1{
-  font-size: 50px;
+  .btn_learn {
+    font-family: "roboto";
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px solid #229958;
+    font-size: 30px;
+    padding: 15px;
+    background-color: #229958;
+    width: 250px;
+    background-color: transparent;
+    height: 80px;
+    color: white;
   }
+  .p1 {
+    font-size: 50px;
+  }
+}
 
-    }
-
-
-  
-  @media screen and (max-width: 900px ) {
-    .height{
-     font-size: 50px;
-    }
-    .height2{
-      font-size: 50px;
-     }
+@media screen and (max-width: 900px) {
+  .height {
+    font-size: 50px;
   }
-  @media screen and (max-width: 720px ) {
-    .height{
-     font-size: 40px;
-    }
-    .height2{
-      font-size: 40px;
-     }
+  .height2 {
+    font-size: 50px;
   }
-  @media screen and (max-width: 644px ) {
-    .height{
-     font-size: 35px;
-    }
-    .height2{
-      font-size: 35px;
-     }
+}
+@media screen and (max-width: 720px) {
+  .height {
+    font-size: 40px;
   }
-    @media screen and (min-width: 100px ) {
- 
-    .img{
-      /* width: 100vw;
+  .height2 {
+    font-size: 40px;
+  }
+}
+@media screen and (max-width: 644px) {
+  .height {
+    font-size: 35px;
+  }
+  .height2 {
+    font-size: 35px;
+  }
+}
+@media screen and (min-width: 100px) {
+  .img {
+    /* width: 100vw;
       background-image: url("../image/bannerr.svg");
       background-repeat: no-repeat;
       background-size: cover;
       opacity:1; */
-      background-position: center;
-     }
-     .img2{
-      /* width: 100vw;
+    background-position: center;
+  }
+  .img2 {
+    /* width: 100vw;
       background-image: url("../image/bannerr.svg");
       background-repeat: no-repeat;
       background-size: cover;
       opacity:1; */
-      background-position: center;
-     }
-  .img3{
-      /* width: 100vw;
+    background-position: center;
+  }
+  .img3 {
+    /* width: 100vw;
       background-image: url("../image/bannerr.svg");
       background-repeat: no-repeat;
       background-size: cover;
       opacity:1; */
-      background-position: center;
-     }
-     .img4{
-      /* width: 100vw;
+    background-position: center;
+  }
+  .img4 {
+    /* width: 100vw;
       background-image: url("../image/bannerr.svg");
       background-repeat: no-repeat;
       background-size: cover;
       opacity:1; */
-      background-position: center;
-     }
-  }  
-  /* @media screen and (max-width: 400px ) {
+    background-position: center;
+  }
+}
+/* @media screen and (max-width: 400px ) {
     .height{
        font-size: 30px;
     }
@@ -365,65 +433,51 @@ color: white;
     height:max-content;
    }
   } */
-  @media screen and (max-width: 480px ) {
-    .height{
-     /* margin-top: 40px; */
-       font-size: 20px;
-    }
-    .height2{
-        font-size: 20px;    
-     }
-
+@media screen and (max-width: 480px) {
+  .height {
+    /* margin-top: 40px; */
+    font-size: 20px;
   }
-
-
-  @media screen and (max-width: 375px ) {
-    .height{
-     /* margin-top: 40px; */
-       font-size: 25px;
-    }
-    .height2{
-        font-size: 25px;    
-     }
-
+  .height2 {
+    font-size: 20px;
   }
-  @media screen and (max-height: 582px ) {
-    .height{
-     /* margin-top: 40px; */
-       font-size: 20px;
-    }
-    .height2{
-        font-size: 20px;    
-     }
+}
+
+@media screen and (max-width: 375px) {
+  .height {
+    /* margin-top: 40px; */
+    font-size: 25px;
   }
-  @media screen and (max-height: 495px ) {
-    .height{
-      text-align: center;
-     margin-top: 20px;
-       font-size: 15px;
-    }
-    .height2{
-        font-size: 15px;    
-     }
+  .height2 {
+    font-size: 25px;
   }
-  @media screen and (max-height: 444px ) {
-    .height{
-      text-align: center;
-     margin-top: 20px;
-       font-size: 10px;
-    }
-    .height2{
-        font-size: 10px;
-     }
-  } 
-
-
-
-
-
-
- 
- 
-
-
-  
+}
+@media screen and (max-height: 582px) {
+  .height {
+    /* margin-top: 40px; */
+    font-size: 20px;
+  }
+  .height2 {
+    font-size: 20px;
+  }
+}
+@media screen and (max-height: 495px) {
+  .height {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 15px;
+  }
+  .height2 {
+    font-size: 15px;
+  }
+}
+@media screen and (max-height: 444px) {
+  .height {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 10px;
+  }
+  .height2 {
+    font-size: 10px;
+  }
+}
