--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -122,6 +122,16 @@ background-color:       rgba(0, 0, 0, 0.79);;
     font-family: 'roboto';
 
   }
+  .Services_button{
+    width: 120px;
+    height: 45px;
+    background-color: white;
+    color: rgb(34, 153, 88);
+    border-radius: 10px;
+    border: none;
+    margin-top: 40px;
+    font-family: roboto;
+  }
    
   /* increase images per line as browser gets larger using media queries
      this first query makes two images per line at 640px width */
@@ -331,6 +341,17 @@ background-color: #72818b;
     .grid-image {
       width:30vw;
       margin-left: 20px;
+    }
+    .Services_button{
+      width: 80px;
+      height: 45px;
+      background-color: white;
+      color: rgb(34, 153, 88);
+      border-radius: 10px;
+      border: none;
+      margin-top: 40px;
+      font-family: "roboto";
+      font-size: 10px;
     }
     .detail{
 
@@ -1238,6 +1259,12 @@ font-family: 'roboto';
     padding: 10px;
     border: none;
   }
+  .line_Services {
+    margin-top: 10px;
+    margin-left: 2px;
+    /* border: 1px solid #229958; */
+    width: 80px;
+}
   .image-grid {
     
     
